frontends/web/src/components/steps/steps.css
.buttons {
    text-align: center;
}

.buttons > button:not(:last-child) {
    margin-right: var(--space-half);
}

.button {
    border: none;
    font-size: 14px;
    font-weight: 400;
    height: 52px;
    min-width: 180px;
    cursor: pointer;
    border-radius: 2px;
    padding: 0 30px;
}

.button:disabled {
    opacity: 0.5;
    cursor: default;
}

.button.primary {
    background-color: #55A4D0;
    color: white;
}

.button.secondary {
    background-color: #FFB761;
    color: white;
}

.button.muted {
    background-color: transparent;
}

.inputGroup {
    padding-top: 18px;
}

.label {
    color: #999999;
    font-size: 12px;
    font-weight: 400;
    margin-bottom: 18px;
}

.input {
    height: 52px;
    border: solid 1px #E5E5E5;
    border-radius: 2px;
    padding: 0 30px;
    min-width: 280px;
    font-size: 14px;
    font-weight: 400;
}

.input::placeholder {
    color: #E5E5E5;
}

.input:focus {
    outline: none;
    border-color: #55A4D0;
}

.headerContainer {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 100%;
    background-color: white;
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

.header, .content {
    width: 920px;
}

.header {
    height: 70px;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.header h1 {
    margin: 0;
    font-weight: 400;
    font-size: 24px;
}

.content {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.passwordGesturesGif {
    height: 75%;
    width: 100%;
    object-fit: cover;
}

.passwordGesturesGifWrapper {
  height: auto;
  width: 100%;
  margin: var(--space-default) auto 0 auto;
}

.steps {
    max-width: var(--content-width);
    width: 100%;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.step {
    max-width: var(--content-width-small);
    padding: var(--space-default);
    transition: all ease 0.2s;
    animation-duration: 0.2s;
    width: 100%;
}

.step.large {
    max-width: var(--content-width);
}

.step:not(.active) {
    display: none !important;
}

.step.empty {
    border-left: none;
}

.step.empty + .step.active {
    padding-top: 0;
}

.step.hide {
    display: none;
}

.step.complete {
    margin-top: 60px;
}

.step.empty.complete {
    margin-top: 0;
    height: 0;
}

.step.active {
    margin-bottom: var(--spacing-default);
}

.stepNumber {
    position: relative;
    left: -18px;
}

.stepNumber > span {
    display: inline-block;
    background-color: #CCCCCC;
    color: white;
    width: 36px;
    height: 36px;
    border-radius: 50%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    font-weight: 400;
    font-size: 14px;
}

.stepNumber > span > img {
    width: 18px;
    height: 18px;
}

.empty .stepNumber > span {
    opacity: 0;
}

.active .stepNumber > span {
    background-color: #89BFDE;
}

.stepContentContainer {
    flex: 1;
    opacity: 0.5;
}

.active .stepContentContainer {
    opacity: 1;
}

.stepContent {
    min-height: 80px;
    max-height: 180px;
    overflow: hidden;
    transition: all ease 0.5s;
}

.complete .stepContent {
    min-height: 36px;
    max-height: 36px;
}

.active .stepContent {
    max-height: none;
}

.stepTitle h3 {
    margin-top: 0;
    margin-bottom: calc(var(--space-default) * 1.5) !important;
    font-size: var(--size-wizard-header);
    line-height: 1;
    font-weight: 400;
    text-align: center;
}

.stepSubHeader {
    margin-top: 0;
    margin-bottom: var(--space-default);
    font-size: var(--size-wizard-header);
    font-weight: 400;
    line-height: 1;
    text-align: center;
}

.stepContext {
    background-color: white;
    padding: var(--space-default);
    margin: var(--space-default) 0;
}

.stepContext.disabled {
    opacity: 0.5;
}

.stepContext p {
    font-size: var(--size-wizard-text);
    line-height: 1.4;
    font-weight: 400;
}

.stepContext p:first-child {
    margin-top: 0;
}

.stepContext p:last-child {
    margin-bottom: 0;
}

.stepContext pre {
    display: block;
    background-color: #F1F1F1;
    text-align: center;
    font-size: 20px;
    padding: 30px 0;
}

.stepContext pre:last-child {
    margin-bottom: 0;
}

.stepContext ul {
    list-style-type: square;
}

.stepContext ul, ol {
    padding-left: calc(var(--space-half) + 2px);
}

.stepContext ul li,
.stepContext ol li {
    color: var(--color-secondary);
    font-weight: 400;
    font-size: var(--size-wizard-text);
}

.stepContext ul li:not(:last-child) {
    margin-bottom: 8px;
}

.standOut {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: flex-start;
    padding: var(--space-half) var(--space-default);
    border-radius: 2px;
    font-size: var(--size-wizard-text);
    font-weight: 400;
    line-height: 1.4;
}

.standOut.error {
    background-color: var(--color-softred);
    color: var(--color-white);
}

.standOut.info {
    background-color: var(--color-blue);
    color: var(--color-white);
}

.standOut.inline {
    margin-top: 0;
}

.standOut > img {
    width: 18px;
    margin-right: var(--space-half);
}

.standOut > p {
    font-size: var(--size-default);
    font-weight: 400;
}

.step button {
    height: var(--wizard-item-height);
    font-size: var(--size-wizard-text);
}

.fullWidth {
    margin-top: var(--space-default) !important;
    width: 100%;
}

.fullWidth > *,
.fullWidth button {
    width: 100%;
}

.fullWidth > *:not(:first-child),
.fullWidth button:not(:first-child) {
    margin-top: var(--space-quarter);
}

.wizardLabel label {
    font-size: var(--size-wizard-text) !important;
}

.wizardCheckbox label {
    font-size: var(--size-wizard-text) !important;
    line-height: 1.4;
}

.wizardCheckbox label::before {
    top: 2px !important;
}

.wizardCheckbox label::after {
    top: 6px !important;
}

.table {
    width: 100%;
    margin-bottom: var(--space-half);
}

.table:last-child {
    margin-bottom: 0;
}

@media (max-width: 1240px) {
    .stepContentContainer {
        margin-left: 0;
    }
}

@media (max-width: 768px) {
    .steps {
        height: 100%;
    }

    .step {
        padding: var(--space-half);
    }

    .stepContext {
        padding: var(--space-default) var(--space-half);
        min-height: 0 !important;
    }

    .stepTitle h3 {
        margin-top: var(--space-half) !important;
        margin-bottom: var(--space-default) !important;
    }
}

/**
 * Turn off animations when requested.
 * On an Android phone, this is typically a "Remove animations" switch
 * in Accessibility section.
 */
@media (prefers-reduced-motion) {
    .step {
        animation: none;
        transition: none;
    }
}

